z-index solved

--- a/style.css
+++ b/style.css
@@ -246,7 +246,9 @@ body {
     background-color: #fcfcfc;
     cursor: pointer;
 }
-
+.profile-lesson-box-mobile{
+    padding: 10px;
+}
 .lessons-box {
     max-width: 340px;
     margin-right: 80px;
@@ -765,6 +767,7 @@ body {
 .lessons-box-mobile-img {
     display: none;
     padding: 10px;
+    
 }
 
 .lessons-box-mobile-img-div {
@@ -772,6 +775,7 @@ body {
     border-radius: 10px;
     width: auto;
     height: auto;
+    
 }
 
 
@@ -782,6 +786,7 @@ body {
     top: 55px;
     left: 20px;
     padding: 5px;
+    z-index: 100;
 }
 
 .lesson-mobile {
